Grid column automatic to avoid overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@ body{
     margin:0px;
     padding:0px;
     background-color: var(--main-bg-color);
+    box-sizing: border-box;
 }
 .body{
     display:flex;
@@ -34,11 +35,11 @@ button {
 
 .bookcard{
     display:flex;
-    gap:10px;
+    gap:5px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width:10em;
+    width:8em;
     height:10em;
     border: solid 2px grey;
     border-radius: 5px;
@@ -67,7 +68,7 @@ button {
     margin-bottom:10px
 }
 .bookread{
-    width:3em;
+    width:2em;
     height:2em;
     border-color: white;
     border-radius: 5px;
@@ -87,9 +88,9 @@ button {
 }
 .book-container{
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr) );
     grid-template-rows: auto;
-    gap:16px;
+    gap:5px;
     background-color: var(--main-bg-color);
     
 }
